<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChatAll</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Login page -->
    <string name="login_user_name">User Name</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Log In</string>
    <string name="login_password_error">Invalid Password</string>
    <string name="login_username_error">Invalid User Name</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_signup">Sign up</string>
    <string name="sign_up_msg">Not a member yet?</string>
    <string name="title_activity_friend_list">FriendListActivity</string>

    <!-- Friends Page -->
    <string name="friends_header">My Friends</string>
    <string name="friends_count">results</string>
    <string name="title_activity_my_chats">MyChatsActivity</string>

    <!-- Chat Page -->
    <string name="chats_header">My Chats</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!--Signup page-->
    <string name="signup_email_hint">Email</string>
    <string name="signup_first_name_hint">First Name</string>
    <string name="signup_last_name_hint">Last Name</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_phone">Phone</string>
    <string name="signup_first_name_error">Invalid first name</string>
    <string name="signup_last_name_error">invalid last name</string>
    <string name="signup_email_error">Invalid email</string>
    <string name="signup_password_error">Invalid password</string>
    <string name="signup_phone_number_error">Invalid phone number</string>
    <string name="signup_success">Success</string>
    <string name="signup_failed">Failed</string>

    <!--Languages-->

    <string name="select_lang_text">Select Your Language</string>
    <string name="submit_lang">Go!</string>
    <string name="title_activity_lang_settings">Language Settings</string>

    <string-array name="language_code_list">
        <item>Bengali</item>
        <item>English</item>
        <item>Gujarati</item>
        <item>Hindi</item>
        <item>Kannada</item>
        <item>Punjabi</item>
        <item>Tamil</item>
        <item>Telugu</item>
    </string-array>

    <string-array name="language_list">
        <item>bn</item>
        <item>en</item>
        <item>gu</item>
        <item>hi</item>
        <item>Kannada</item>
        <item>Punjabi</item>
        <item>Tamil</item>
        <item>Telugu</item>
    </string-array>


</resources>
