<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background_color">

    <TextView
        android:id="@+id/signup_header"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:textColor="@color/theme_inverse_color"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/login_signup"/>

    <EditText
        android:id="@+id/signup_email"
        android:layout_marginTop="5dp"
        android:layout_below="@id/signup_header"
        android:hint="@string/signup_email_hint"
        android:inputType="textEmailAddress"
        style="@style/signup_page_edit_text_style"/>

    <EditText
        android:id="@+id/signup_first_name"
        android:layout_below="@id/signup_email"
        android:hint="@string/signup_first_name_hint"
        style="@style/signup_page_edit_text_style"/>

    <EditText
        android:id="@+id/signup_last_name"
        android:layout_below="@id/signup_first_name"
        android:hint="@string/signup_last_name_hint"
        style="@style/signup_page_edit_text_style"/>

    <EditText
        android:id="@+id/signup_phone"
        android:layout_below="@id/signup_last_name"
        android:hint="@string/signup_phone"
        android:inputType="number"
        style="@style/signup_page_edit_text_style"/>

    <EditText
        android:id="@+id/signup_password"
        android:layout_below="@id/signup_phone"
        android:hint="@string/signup_password_hint"
        android:inputType="textPassword"
        style="@style/signup_page_edit_text_style"/>


    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_signup"
        android:textSize="20sp"
        android:background="@drawable/login_button_background_selector"
        android:layout_below="@+id/signup_password"
        android:onClick="onSignUpClicked"
        android:textColor="@color/theme_inverse_color"/>

    <ProgressBar
        android:id="@+id/signup_progress"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>