
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background_color">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_height="120dp"
        android:layout_width="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo_p"/>

    <LinearLayout
        android:id="@+id/login_control_layout"
        android:layout_height="400dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/login_logo"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_username"
            style="@style/login_page_edit_text_style"
            android:inputType="textEmailAddress"
            android:hint="@string/login_user_name"/>

        <EditText
            android:id="@+id/login_password"
            style="@style/login_page_edit_text_style"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:hint="@string/login_password"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/login_sign_in"
            android:background="@drawable/login_button_background_selector"
            android:onClick="onLoginClicked"
            android:textColor="@color/theme_inverse_color"/>

        <Button
            android:id="@+id/signup"
            android:layout_height="25dp"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:visibility="visible"
            android:onClick="onSignupClicked"
            android:text="@string/sign_up_msg"
            android:background="@android:color/transparent"
            android:textColor="@color/theme_inverse_color"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>